# qrpicture

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile.am  README.md  _config.yml  autogen.sh  config.php  configure.ac  index.md  qrpicture.sql  qrscq.cc  qrwork.cc
_data/: home.yml
www.qrpicture.com/: MooTools-Core-1.6.0.js  MooTools-More-1.6.0.js  config.php  index-old.php  index.html  index.php  index3.php  qrpicture.css  qrpicture.js  status.php  submit.php  worker.php
