AC_INIT([qrpicture], [1.0.0])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_AUX_DIR([m4])
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE([foreign])
AM_CONFIG_HEADER([config.h])

AC_PROG_INSTALL
AM_PROG_AS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES([GDLIB], [gdlib])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
